# Proyecto-PROGRAMACION

./: CMakeLists.txt  README.md  cliente.cpp  cliente.h  clienteBlack.cpp  clienteBlack.h  clienteNormal.cpp  clienteNormal.h  clienteOro.cpp  clienteOro.h
Proyecto-SALINAS-OJEDA-BUGLIOTTI/: CMakeLists.txt  ClienteBlack.cpp  ClienteBlack.h  ClienteOro.cpp  ClienteOro.h  SistemaGestion.cpp  SistemaGestion.h  Transaccion.cpp  Transaccion.h  cliente.cpp  cliente.h  clientePlata.cpp  clientePlata.h  main.cpp
