cmake_minimum_required(VERSION 3.24)
project(Proyecto_SALINAS_OJEDA_BUGLIOTTI)

set(CMAKE_CXX_STANDARD 17)

add_executable(Proyecto_SALINAS_OJEDA_BUGLIOTTI main.cpp cliente.h cliente.cpp clientePlata.h clientePlata.cpp ClienteBlack.cpp ClienteBlack.h ClienteOro.cpp ClienteOro.h Transaccion.cpp Transaccion.h SistemaGestion.cpp SistemaGestion.h)
